@@ -1,5 +1,7 @@
 2011-01-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
+	* include/mcs/BeliefState.h: Set up Decisionlevel as a struct of 2 VecSizeT*.
+
 	* testsuite/testInterfaceRelSat.cpp: Update test case.
 
 	* src/solver/RelSatSolver.cpp: Selectively collect conflicts from relsat.
